fixed display overflow issue

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,7 +7,6 @@
   // min-width: 50vw;
   min-width: 300px;
   max-width: 900px;
-
   // NEOMORPHISM
   // border-radius: 37px;
   // background: linear-gradient(225deg, #0c1b2d, #0a1726);
@@ -23,6 +22,23 @@
   // -webkit-backdrop-filter: blur(7.6px);
   -webkit-backdrop-filter: blur(57.6px);
   border: 1px solid rgba(255, 255, 255, 0.48);
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+// KEEPS MAIN CONTAINER CENTERED ON SCREEN
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  overflow: hidden;
 }
 
 label {
