--- a/client/src/components/StarAnimation/starAnimation.styles.scss
+++ b/client/src/components/StarAnimation/starAnimation.styles.scss
@@ -5,14 +5,14 @@
 }
 // href="https://fonts.googleapis.com/css2?family=Alata&family=Bebas+Neue&family=Poppins:wght@400;500;700&display=swap"
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-  overflow: hidden;
-}
+// body {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   min-height: 100vh;
+//   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+//   overflow: hidden;
+// }
 
 @function random_range($min, $max) {
   $rand: random();
